This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
5/28/19: Fixed handling of K3 references with CDS mode, stopped getting defect
list for K3, and stopped writing a defect file if it has nothing to correct.

5/25/19: Capability to make a file marking that an image file is open for a
tilt series (added 4/15/19) was fixed for bidirectional series (In 3.7).

5/24/19: Added ability to restore original stage X/Y position after tilting
and added options to the tilt script commands for using it.

5/24/19: Moved option-setting for Ctffind fitting to a dialog.

5/24/19: Added property to set interval over which dose calibration is
considered valid.

5/24/19: Fixed Setup supermontage, broken 8/16/17 (In 3.7).

5/22/19: Made RecordAndTiltTo command set sign of backlash properly (In 3.7).

5/22/19: SEM_3-7-5
5/22/19: Prevented negative overlaps when fitting montage to small polygon;
prevented single piece from being put on skip list (In 3.7).

5/20/19: Fixed scope control dialog setting illuminated area when it is above
the upper limit, which happens in LM (In 3.7).

5/20/19: Fixed dose meter adding dose when screen is down in the Trial/Focus
area (In 3.7). 

5/19/19: Fixed Ctffind module when fitting with a fixed non-zero phase value
(In 3.7).

5/12/19: Stopped converting the fixed phase from degrees to radians when doing
a fit on clicking an FFT since it is already in radians; allowed fitting
phase range of 120 degrees in Ctffind command (In 3.7).

5/7/19: Added property to allow real camera to be used with scope in STEM
mode.

5/6/19: More DPI scaling in image drawing and stock dialog boxes.

5/6/19: Added option for a numeric date-time at the start of frame file name.

5/6/19: Fixed TiltDuringRecord not being allowed for a JEOL scope (In 3.7).
